--- a/src/index.html
+++ b/src/index.html
@@ -3,10 +3,37 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="shortcut icon" href="./img/favicon.png" type="image/x-icon">
+    <link rel="shortcut icon" href="img/favicon.png" type="image/x-icon">
+    <link rel="stylesheet" href="style.css">
     <title>Portfólio - Glauber</title>
 </head>
 <body>
-    
+    <header>
+        <img src="./img/computer.png" alt="Notebook">
+        <nav>
+            <a href="#">Sobre</a>
+            <a href="#">Habilidades</a>
+            <a href="#">Projetos</a>            
+        </nav>
+    </header>
+    <main>
+        <section>
+            <div id="me">
+                Olá
+            </div>
+            <div id="above">
+                Sobre
+            </div>
+            <div id="mySkills">
+                Habilidades
+            </div>
+            <div id="myProjects">
+                Slot
+            </div>
+        </section>
+    </main>    
+    <footer>
+        <a href="#">Git</a>
+    </footer>
 </body>
 </html>
