Criação do rodapé
Primeiras configurações do footer.

--- a/src/index.html
+++ b/src/index.html
@@ -33,7 +33,13 @@
         </section>
     </main>    
     <footer>
-        <a href="#">Git</a>
+        <img src="./img/email-icon.png" alt="Contato">
+        <div>
+            <p>E-mail: glauber.guiferr.dev@gmail.com</p>
+            <p>Telefone: (75)98138-9600</p>
+        </div>
+        <a href="https://github.com/Glauber-GuimaFerr" target="_blank"><img src="./img/git-icon.png" alt="Github"></a>
+        <a href="https://www.linkedin.com/in/glauber-guimarães-ferreira-890809335/" target="_blank"><img src="./img/linkedin-icon.png" alt="Linkedin"></a>
     </footer>
 </body>
 </html>
