Criação da seção de apresentação
Adição da section inicial, com um place holder pendente.

--- a/src/index.html
+++ b/src/index.html
@@ -19,7 +19,11 @@
     <main>
         <section>
             <div id="me">
-                Olá
+                <div>
+                    <h3>Desenvolvedor Web</h3>
+                    <h1>Glauber Guimarães Ferreira</h1>
+                </div>
+                <img src="./img/template.png" alt="Template">
             </div>
             <div id="above">
                 Sobre
