Criação da seção de descrição
Adição da section contando detalhes sobre mim.

--- a/src/index.html
+++ b/src/index.html
@@ -26,13 +26,15 @@
                 <img src="./img/template.png" alt="Template">
             </div>
             <div id="above">
-                Sobre
+                <h1>Sobre</h1>
+                <p>Meu nome é Glauber, sou desenvolvedor front-end júnior e possuo conhecimento em linguagens como <strong>HTML, CSS, JavaScript, TypeScript e PHP</strong>. Sou formado em análise e desenvolvimento de sistemas e desde então tenho me dedicado em desenvolver sites de fácil usabilidade, com interfaces intuitivas, responsividade e otimização.</p>
+                <p>Meu objetivo é conseguir desenvolver sistemas webs completos e mais estáveis possíveis, utilizando algumas das ferramentas mais populares do mercado. Estou disposto a aprender e tentar resolver problemas, visando colaborar com minha equipe e trazer uma melhor experiência para o usuário.</p>
             </div>
             <div id="mySkills">
-                Habilidades
+                <h1>Habilidades</h1>
             </div>
             <div id="myProjects">
-                Slot
+                <h1>Projetos</h1>
             </div>
         </section>
     </main>    
