Criação da seção de habilidades
Adição da section de skills utilizando flex box.

--- a/src/index.html
+++ b/src/index.html
@@ -27,11 +27,21 @@
             </div>
             <div id="above">
                 <h1>Sobre</h1>
-                <p>Meu nome é Glauber, sou desenvolvedor front-end júnior e possuo conhecimento em linguagens como <strong>HTML, CSS, JavaScript, TypeScript e PHP</strong>. Sou formado em análise e desenvolvimento de sistemas e desde então tenho me dedicado em desenvolver sites de fácil usabilidade, com interfaces intuitivas, responsividade e otimização.</p>
-                <p>Meu objetivo é conseguir desenvolver sistemas webs completos e mais estáveis possíveis, utilizando algumas das ferramentas mais populares do mercado. Estou disposto a aprender e tentar resolver problemas, visando colaborar com minha equipe e trazer uma melhor experiência para o usuário.</p>
+                <p>Meu nome é Glauber, sou desenvolvedor front-end júnior e possuo conhecimento em linguagens como <strong>HTML, CSS, JavaScript, TypeScript e PHP</strong>. Me formei em análise e desenvolvimento de sistemas aos 20 anos e desde então tenho me dedicado em desenvolver sites de fácil usabilidade, com interfaces intuitivas, responsividade e otimização.</p>
+                <p>Meu objetivo é conseguir desenvolver sistemas webs completos e mais estáveis possíveis, utilizando algumas das ferramentas mais populares do mercado. Estou disposto a aprender e tentar resolver problemas dos softwares, visando colaborar com minha equipe e trazer uma melhor experiência para o usuário.</p>
             </div>
             <div id="mySkills">
                 <h1>Habilidades</h1>
+                <div id="langBox">
+                    <img src="./img/language_icons/html5-icon.svg" alt="HTML">
+                    <img src="./img/language_icons/css3-icon.svg" alt="CSS"> 
+                    <img src="./img/language_icons/javascript-icon.svg" alt="JavaScript">
+                    <img src="./img/language_icons/php-icon.svg" alt="PHP">
+                    <img src="./img/language_icons/typescript-icon.svg" alt="TypeScript">
+                    <img src="./img/language_icons/vuejs-icon.svg" alt="Vue">
+                    <img src="./img/language_icons/react-icon.svg" alt="React">
+                    <img src="./img/language_icons/angular-icon.svg" alt="Angular">        
+                </div>
             </div>
             <div id="myProjects">
                 <h1>Projetos</h1>
