Melhorias no header
Atualização na visualização do header.

--- a/src/index.html
+++ b/src/index.html
@@ -11,6 +11,7 @@
     <header>
         <img src="./img/computer.png" alt="Notebook">
         <nav>
+            <a href="#">Início</a>
             <a href="#">Sobre</a>
             <a href="#">Habilidades</a>
             <a href="#">Projetos</a>            
@@ -27,7 +28,7 @@
             </div>
             <div id="above">
                 <h1>Sobre</h1>
-                <p>Meu nome é Glauber, sou desenvolvedor front-end júnior e possuo conhecimento em linguagens como <strong>HTML, CSS, JavaScript, TypeScript e PHP</strong>. Me formei em análise e desenvolvimento de sistemas aos 20 anos e desde então tenho me dedicado em desenvolver sites de fácil usabilidade, com interfaces intuitivas, responsividade e otimização.</p>
+                <p>Meu nome é Glauber, sou desenvolvedor front-end júnior e possuo conhecimento em linguagens como <strong>HTML, CSS, JavaScript e TypeScript</strong>. Me formei em análise e desenvolvimento de sistemas aos 20 anos e desde então tenho me dedicado em desenvolver sites de fácil usabilidade, com interfaces intuitivas, responsividade e otimização.</p>
                 <p>Meu objetivo é conseguir desenvolver sistemas webs completos e mais estáveis possíveis, utilizando algumas das ferramentas mais populares do mercado. Estou disposto a aprender e tentar resolver problemas dos softwares, visando colaborar com minha equipe e trazer uma melhor experiência para o usuário.</p>
             </div>
             <div id="mySkills">
