Criação do grid layout de projetos
Adição dos containers dos projetos e melhorias na interface.

--- a/src/index.html
+++ b/src/index.html
@@ -11,10 +11,10 @@
     <header>
         <img src="./img/computer.png" alt="Notebook">
         <nav>
-            <a href="#">Início</a>
-            <a href="#">Sobre</a>
-            <a href="#">Habilidades</a>
-            <a href="#">Projetos</a>            
+            <a href="#me">Início</a>
+            <a href="javascript:void(0);" onclick="window.scrollTo(0, 650);">Sobre</a>
+            <a href="javascript:void(0);" onclick="window.scrollTo(0, 1150);">Habilidades</a>
+            <a href="javascript:void(0);" onclick="window.scrollTo(0, 1540);">Projetos</a>            
         </nav>
     </header>
     <main>
@@ -46,6 +46,26 @@
             </div>
             <div id="myProjects">
                 <h1>Projetos</h1>
+                <div id="grid">
+                    <div class="box">
+                        <div class="overlay">Projeto</div>
+                    </div>
+                    <div class="box">
+                        <div class="overlay">Projeto</div>
+                    </div>
+                    <div class="box">
+                        <div class="overlay">Projeto</div>
+                    </div>
+                    <div class="box">
+                        <div class="overlay">Projeto</div>
+                    </div>
+                    <div class="box">
+                        <div class="overlay">Projeto</div>
+                    </div>
+                    <div class="box">
+                        <div class="overlay">Projeto</div>
+                    </div>
+                </div>
             </div>
         </section>
     </main>    
